# yabfpp

./: .gitmodules  Any.h  BFMachine.cpp  BFMachine.h  Builder.h  CLibHandler.cpp  CLibHandler.h  CMakeCache.txt  CMakeLists.txt  CallStack.cpp  CallStack.h  CompilerState.cpp  CompilerState.h  ConstantHelper.cpp  ConstantHelper.h  ContextBuilderModule.cpp  ContextBuilderModule.h  Expr.cpp  Expr.h  PlatformDependent.cpp  PlatformDependent.h  Pointer.h  README.md  Source.cpp  Source.h  SyntaxError.h  SyntaxErrorException.cpp  SyntaxErrorException.h  TypeTag.h  VariableHandler.cpp  VariableHandler.h  main.cpp  parser.cpp  parser.h
bench/: BFProgramGenerator.h  anyBench.cpp  parserBench.cpp  plot.py
test/: AnyTest.cpp  SourceTest.cpp  TestCompiler.py
test/programs/: 400quine.bfpp  bsort.bfpp  bsort.expected  diffandplus.bfpp  fib.bfpp  fib.expected  fibrec.bfpp  fibrec2.bfpp  fun3.bfpp  hello.bfpp  ifNoelse.bfpp  ifelse.bfpp  serpinski.bfpp  squares.bfpp  wc.bfpp  wc.expected
